--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,9 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-certifi==2026.1.4
-charset-normalizer==3.4.4
-click==8.3.1
-colorama==0.4.6
-exceptiongroup==1.3.1
-fastapi==0.131.0
-filelock==3.24.3
-h11==0.16.0
-idna==3.11
-joblib==1.5.3
-numpy==2.2.6
-pandas==2.3.3
-pydantic==2.12.5
-pydantic_core==2.41.5
-python-dateutil==2.9.0.post0
-pytz==2025.2
-requests==2.32.5
-requests-file==3.0.1
-scikit-learn==1.7.2
-scipy==1.15.3
-six==1.17.0
-starlette==0.52.1
-threadpoolctl==3.6.0
-tldextract==5.3.1
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.3
-uvicorn==0.41.0
-xgboost==3.2.0
+fastapi==0.110.0
+uvicorn==0.29.0
+pandas==2.2.1
+numpy==1.26.4
+scikit-learn==1.4.1.post1
+xgboost==2.0.3
+joblib==1.3.2
+tldextract==5.1.1
+pydantic==2.6.4
